--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ PORT=2107
 DB_USER=root
 DB_PASS=C0nt4inerS
 DB_NAME=qerja-test
-DB_HOST=116.0.5.202
-DB_PORT=33006
+DB_HOST=DB_HOST
+DB_PORT=DB_PORT
 
 TOKEN_KEY=Q3rj@-2107
